--- a/ansible/roles/root_userapps/tasks/devtools.yml
+++ b/ansible/roles/root_userapps/tasks/devtools.yml
@@ -5,6 +5,7 @@
       - cmake
       - gdb
       - lcov
+      - minicom
 
 - name: devtools > Python
   community.general.pacman: name={{ packages | join(',') }}
