user's gnome setup

--- a/setup-user.yml
+++ b/setup-user.yml
@@ -6,4 +6,5 @@
     - {import_role: name=user tasks_from=base,          tags: ['base']}
     - {import_role: name=user tasks_from=desktop_files, tags: ['desktop']}
     - {import_role: name=user tasks_from=dotfiles,      tags: ['dotfiles']}
+    - {import_role: name=user tasks_from=gnome,         tags: ['gnome']}
     - {import_role: name=user tasks_from=vscode,        tags: ['vscode']}
