configure gnome apps folders

--- a/ansible/roles/user/tasks/gnome.yml
+++ b/ansible/roles/user/tasks/gnome.yml
@@ -1,4 +1,4 @@
-# See "dconf dump /" and "dconf read /path/to/key" 
+# Retrieve key/value using commands "dconf dump /" and "dconf read /path/to/key"
 - name: gnome > Set locale
   community.general.dconf: key="/system/locale/region" value="'fr_FR.UTF-8'" state=present
 
@@ -26,3 +26,71 @@
     - { key: "/org/gnome/settings-daemon/plugins/media-keys/volume-down", value: "['<Alt>Page_Down']" }
     - { key: "/org/gnome/settings-daemon/plugins/media-keys/volume-mute", value: "['<Alt>Pause']" }
  
+- name: gnome > Define Apps Folders
+  community.general.dconf: 
+    key: /org/gnome/desktop/app-folders/folder-children
+    value: "{{ apps_folders | string }}"
+    state: present
+
+- block:
+  - name: gnome > Set "GnomeUtilities" folder name
+    community.general.dconf:
+      key: "/org/gnome/desktop/app-folders/folders/GnomeUtilities/name" 
+      value: "'Utilitaires Gnome'"
+      state: present
+  - name: gnome > Set "GnomeUtilities" apps 
+    community.general.dconf: 
+      key: "/org/gnome/desktop/app-folders/folders/GnomeUtilities/apps" 
+      value: "{{ folder_gnomeutilities_apps | string }}"
+      state: present
+  - name: gnome > Set "GnomeUtilities" categories 
+    community.general.dconf: 
+      key: "/org/gnome/desktop/app-folders/folders/GnomeUtilities/categories" 
+      value: "['X-GNOME-Utilities']"
+      state: present
+
+- block:
+  - name: gnome > Set "LibreOffice" folder name
+    community.general.dconf:
+      key: "/org/gnome/desktop/app-folders/folders/LibreOffice/name" 
+      value: "'LibreOffice'"
+      state: present
+  - name: gnome > Set "LibreOffice" apps 
+    community.general.dconf: 
+      key: "/org/gnome/desktop/app-folders/folders/LibreOffice/apps" 
+      value: "{{ folder_libreoffice_apps | string }}"
+      state: present
+
+- block:
+  - name: gnome > Set "Qt" folder name
+    community.general.dconf:
+      key: "/org/gnome/desktop/app-folders/folders/Qt/name" 
+      value: "'Utilitaires Qt'"
+      state: present
+  - name: gnome > Set "Qt" apps 
+    community.general.dconf: 
+      key: "/org/gnome/desktop/app-folders/folders/Qt/apps" 
+      value: "{{ folder_qt_apps | string }}"
+      state: present
+  - name: gnome > Set "Qt" categories 
+    community.general.dconf: 
+      key: "/org/gnome/desktop/app-folders/folders/Qt/categories" 
+      value: "['Qt']"
+      state: present
+  - name: gnome > Set "Qt" excluded-apps 
+    community.general.dconf: 
+      key: "/org/gnome/desktop/app-folders/folders/Qt/excluded-apps" 
+      value: "['anki.desktop']"
+      state: present
+
+- block:
+  - name: gnome > Set "System" folder name
+    community.general.dconf:
+      key: "/org/gnome/desktop/app-folders/folders/System/name" 
+      value: "'Système'"
+      state: present
+  - name: gnome > Set "System" apps 
+    community.general.dconf: 
+      key: "/org/gnome/desktop/app-folders/folders/System/apps" 
+      value: "{{ folder_system_apps | string }}"
+      state: present
