--- a/ansible/roles/user/defaults/main.yml
+++ b/ansible/roles/user/defaults/main.yml
@@ -1,1 +1,40 @@
 code_install_dir: ~/Applications/VSCode-linux-x64
+
+apps_folders:
+  - GnomeUtilities
+  - LibreOffice
+  - Photo
+  - Qt
+  - System
+
+folder_gnomeutilities_apps:
+  - org.gnome.Calculator.desktop
+  - org.gnome.Cheese.desktop
+  - org.gnome.Extensions.desktop
+  - org.gnome.Evince.desktop
+  - org.gnome.Software.desktop
+  - org.gnome.Weather.desktop
+  - org.gnome.clocks.desktop
+  - org.gnome.eog.desktop
+  - org.gnome.tweaks.desktop
+
+folder_libreoffice_apps:
+  - libreoffice-base.desktop
+  - libreoffice-calc.desktop 
+  - libreoffice-draw.desktop 
+  - libreoffice-impress.desktop
+  - libreoffice-math.desktop
+  - libreoffice-startcenter.desktop
+  - libreoffice-writer.desktop
+
+folder_qt_apps:
+  - qvidcap.desktop
+  - qv4l2.desktop
+
+folder_system_apps:
+  - cups.desktop
+  - gnome-control-center.desktop
+  - gnome-system-monitor.desktop
+  - lstopo.desktop
+  - org.gnome.Usage.desktop
+  - timeshift-gtk.desktop
