--- a/ansible/roles/root_base/tasks/gnome.yml
+++ b/ansible/roles/root_base/tasks/gnome.yml
@@ -36,8 +36,9 @@
       - tracker,tracker-miners
       - tracker3,tracker3-miners
       - xdg-user-dirs-gtk
+      - xdg-desktop-portal-gnome
 
-# https://archlinux.org/groups/x86_64/gnome-usage/
+# https://archlinux.org/groups/x86_64/gnome-extra/
 - name: gnome > Install my selection from 'gnome-extra' group
   community.general.pacman: name={{ packages | join(',') }}
   vars:
