--- a/ansible/roles/user/files/desktop_files/visual-studio-code.desktop
+++ b/ansible/roles/user/files/desktop_files/visual-studio-code.desktop
@@ -3,7 +3,7 @@ Name=Visual Studio Code
 Comment=Code Editing. Refined.
 GenericName=Text Editor
 Exec=/home/viny/Applications/VSCode-linux-x64/code --no-sandbox --unity-launch %F
-Icon=visual-studio-code
+Icon=/home/viny/Applications/VSCode-linux-x64/resources/app/resources/linux/code.png
 Type=Application
 StartupNotify=false
 StartupWMClass=code
@@ -15,4 +15,4 @@ Keywords=vscode;
 [Desktop Action new-empty-window]
 Name=New Empty Window
 Exec=/home/viny/Applications/VSCode-linux-x64/code --no-sandbox --new-window %F
-Icon=visual-studio-code
+Icon=/home/viny/Applications/VSCode-linux-x64/resources/app/resources/linux/code.png
