--- a/ansible/roles/user/files/desktop_files/visual-studio-code.desktop
+++ b/ansible/roles/user/files/desktop_files/visual-studio-code.desktop
@@ -2,7 +2,7 @@
 Name=Visual Studio Code
 Comment=Code Editing. Refined.
 GenericName=Text Editor
-Exec=/home/viny/Applications/VSCode-linux-x64/code --no-sandbox --unity-launch %F
+Exec=/home/viny/Applications/VSCode-linux-x64/code --no-sandbox --disable-gpu --unity-launch %F
 Icon=/home/viny/Applications/VSCode-linux-x64/resources/app/resources/linux/code.png
 Type=Application
 StartupNotify=false
@@ -14,5 +14,5 @@ Keywords=vscode;
 
 [Desktop Action new-empty-window]
 Name=New Empty Window
-Exec=/home/viny/Applications/VSCode-linux-x64/code --no-sandbox --new-window %F
+Exec=/home/viny/Applications/VSCode-linux-x64/code --no-sandbox --disable-gpu --new-window %F
 Icon=/home/viny/Applications/VSCode-linux-x64/resources/app/resources/linux/code.png
