--- a/ansible/roles/root_base/handlers/main.yml
+++ b/ansible/roles/root_base/handlers/main.yml
@@ -4,5 +4,11 @@
 - name: grub-mkconfig
   command: grub-mkconfig -o /boot/grub/grub.cfg
 
-- name: start-nftables
-  command: systemctl start nftables
+- name: restart-nftables
+  ansible.builtin.systemd: name=nftables state=restarted
+
+- name: restart-systemd-networkd
+  ansible.builtin.systemd: name=systemd-networkd state=restarted
+
+- name: restart-ulogd
+  ansible.builtin.systemd: name=ulogd state=restarted
