--- a/ansible/roles/root_base/tasks/network.yml
+++ b/ansible/roles/root_base/tasks/network.yml
@@ -3,7 +3,7 @@
   with_items:
     - avahi,nss-mdns
     - systemd-resolvconf
-    - nftables
+    - nftables,ulogd
 
 - name: network > Enable mDNS hostname resolution
   ansible.builtin.lineinfile:
@@ -14,9 +14,18 @@
 
 - name: network > Default network configuration
   ansible.builtin.copy: src=default.network dest=/etc/systemd/network/default.network
+  notify: restart-systemd-networkd
 
 - name: network > Enable systemd DNS stub file
   ansible.builtin.file: state=link src=/run/systemd/resolve/stub-resolv.conf path=/etc/resolv.conf force=yes
+
+- name: network> Copy ulogd configuration file
+  ansible.builtin.copy: src=ulogd.conf dest=/etc/ulogd.conf
+  notify: restart-ulogd
+
+- name: network> Copy nftables configuration file
+  ansible.builtin.copy: src=nftables.conf dest=/etc/nftables.conf
+  notify: restart-nftables
 
 - name: network > Enable network services
   ansible.builtin.systemd: name={{ item }} enabled=yes state=started
@@ -25,9 +34,10 @@
     - systemd-networkd
     - systemd-resolved
     - systemd-timesyncd
+    - ulogd
 
 # nftables service stop itfself after loading rules
 - name: network > Enable nftables service
   ansible.builtin.systemd: name=nftables enabled=yes
-  notify: start-nftables
+  notify: restart-nftables
   
