--- a/ansible/roles/user/tasks/vscode.yml
+++ b/ansible/roles/user/tasks/vscode.yml
@@ -11,6 +11,7 @@
     - DavidAnson.vscode-markdownlint
     - golang.go
     - mhutchie.git-graph
+    - ms-vscode-remote.remote-containers
     - ms-vscode.cpptools
     - ms-vscode.cmake-tools
     - PKief.material-icon-theme
