--- a/ansible/roles/root_userapps/tasks/devtools.yml
+++ b/ansible/roles/root_userapps/tasks/devtools.yml
@@ -12,3 +12,10 @@
   vars:
     packages:
       - pycharm-community-edition
+
+- name: devtools > KiCad
+  community.general.pacman: name={{ packages | join(',') }}
+  vars:
+    packages:
+      - kicad
+      - kicad-library
