--- a/ansible/roles/root_userapps/tasks/devtools.yml
+++ b/ansible/roles/root_userapps/tasks/devtools.yml
@@ -19,5 +19,6 @@
 - name: devtools > Install custom udev rules
   ansible.builtin.copy: src={{ item }} dest=/etc/udev/rules.d/{{ item }} mode=0644
   with_items:
+    - esp32.rules
     - raspberry.rules
     - saleae.rules
