remove PyCharm & upgrade Java

--- a/ansible/roles/root_userapps/tasks/base.yml
+++ b/ansible/roles/root_userapps/tasks/base.yml
@@ -17,4 +17,4 @@
       - vlc
 
 - name: base > Install PortfolioPerformance dependencies
-  community.general.pacman: name=jre11-openjdk
+  community.general.pacman: name=jre-openjdk
